Change Log for OpenXava project
===============================

- Fix: Using @SearchListCondition in a reference the columns customization done on the search list is lost.
- Fix: @Editor("ValidValuesRadioButton") for an enum produces an IndexOutOfBoundsException in the log.
- Fix: Popup calendar for date properties is not shown in the correct language sometimes after refreshing. 
- New method cloneWith999() in Dates utility class to remove milliseconds from a date.
- Fix: Dynamic combos created adding valid values using View class stopped to work in 7.1.
- Fix: Property csvEncoding of xava.properties has no effect when importing CSV files.
- Driver version in doc and new projects upgraded for Microsoft SQL Server.
- Fix: Low performance in calendar view with large datasets when the @Tab has an IFilter.
- New CompositeFilter to sum two IFilter to set with Tab.setFilter() or as base for an IFilter for @Tab.
- New environment variable XAVA_CALENDAR_VIEWEVENT_ACTION to define the action on click in a calendar event.
- Fix: Duplicate member in @View inside a group does not shown the warning message and stacktrace.
- Fix: CSS files are not cached by browser.
- Fix: Calendar icon for a date property filtering in list shown when filter by year.

OpenXava 7.1.4 (2023-8-5)
-------------------------
- Embedded Tomcat used in development upgraded to 9.0.78.
- Driver version in doc and new projects upgraded for MySQL.
- Fix: xava:button tag to use in custom JSPs breaks the page if you use argv attribute.
- Fix: Ordering a list or collection by a property of a reference of a reference (3 levels or more) fails.
- Fix: When uploading several files at same time on creating a new entity some of the files may get lost.
- Fix: Email subscription icon difficult to see with some themes.
- Fix: @DisplaySize with a value greater than 50 ignored when used with @Column(length=255).
- Fix: Moving columns to customize a list does not work if the application name contains underscores.