@@ -222,6 +222,8 @@
         <li><a class="wiki_link" href="db2_es.html">Configuración para Db2</a></li>
         <li><a class="wiki_link" href="firebird_es.html">Configuración para
             Firebird</a></li>
+        <li><a class="wiki_link" href="mariadb_en.html">Configuración para
+            MariaDB (en inglés)</a></li>
         <li><a class="wiki_link" href="leanxcale_es.html">LeanXcale</a></li>
         <li><a class="wiki_link" href="intellij_es.html">IntelliJ IDEA</a></li>
         <li><a class="wiki_link" href="eclipse_es.html">Eclipse</a></li>
