@@ -200,6 +200,8 @@
         <li><a class="wiki_link" href="db2_en.html">Configuration for Db2</a></li>
         <li><a class="wiki_link" href="firebird_en.html">Configuration for
             Firebird</a></li>
+        <li><a class="wiki_link" href="mariadb_en.html">Configuration for
+            MariaDB</a></li>
         <li><a class="wiki_link" href="leanxcale_zh.html">LeanXcale</a></li>
         <li><a class="wiki_link" href="intellij_en.html">IntelliJ IDEA</a></li>
         <li><a class="wiki_link" href="eclipse_en.html">Eclipse</a></li>
